[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Startup.gd" type="Script" id=1]
[ext_resource path="res://resources/styles/LoginTextEdits.tres" type="Theme" id=2]
[ext_resource path="res://resources/styles/PopupPreset.tres" type="Theme" id=3]

[node name="Startup" type="Node" groups=["Persist"]]
script = ExtResource( 1 )

[node name="UsernameInput" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.5
margin_top = -77.5
margin_right = 170.5
margin_bottom = 77.5
theme = ExtResource( 3 )
window_title = "Please enter a username"

[node name="LineEdit" type="LineEdit" parent="UsernameInput"]
anchor_left = 0.101
anchor_top = 0.335
anchor_right = 0.899
anchor_bottom = 0.335
margin_left = 0.0589981
margin_top = -19.925
margin_right = -0.059021
margin_bottom = 20.075
theme = ExtResource( 2 )
align = 1
max_length = 30
placeholder_text = "Max Characters 30"
caret_blink = true

[node name="AcceptButton" type="Button" parent="UsernameInput"]
anchor_left = 0.277
anchor_top = 0.671
anchor_right = 0.723
anchor_bottom = 0.929
margin_left = 0.0429993
margin_top = -0.00499725
margin_right = -0.0430145
margin_bottom = 0.00495911
text = "Accept"

[connection signal="text_changed" from="UsernameInput/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="UsernameInput/AcceptButton" to="." method="_on_AcceptButton_pressed"]
